# oxide-og

./: .gitignore  .travis.yml  Cargo.toml  LICENSE
src/: bitboard.rs  board.rs  castles.rs  chess_move.rs  errors.rs  feature_check.rs  lib.rs  lines.rs  logging.rs  main.rs  meta.rs  pieces.rs  position.rs  side.rs  square.rs  tt.rs  types.rs  zobrist.rs
src/attacks/: king.rs  knight.rs  mod.rs  pawn.rs  sliding.rs
