[package]
name = "oxide"
version = "0.1.0"
authors = ["itotallyrock <itotallyrock@users.noreply.github.com>"]
edition = "2018"
description = "Oxide an attempt at a rust chess engine"
keywords = ["chess", "engine"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
err-derive = "0.2"
